# FraudDetection

./: .gitignore  .pre-commit-config.yaml  ReadMe.md  cli.py  config.yaml  eda_cleaning.ipynb  environment.yaml  final_results.ipynb  load_data.py  model_selection.ipynb  model_training.py  modelling.ipynb  pyproject.toml
Modules/: Pipelines.py  cli.py  load_data.py  modelling.py  plotting.py  preprocessing.py  transforming.py
Pipelines/: Pipeline1.py  Pipeline2.py  Pipeline3.py
tests/: tests_transforming.py
