[project]
name = "FraudDetection"
version = "0.1.0"
description = "Using GLMs and LGBMs to detect fraudulent transactions."
license = { text = "MIT" }
readme = "ReadMe.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"FraudDetection" = ["data/*"]

[tool.setuptools.packages]
find = { include = ["Modules"] }

[project.scripts]
frauddetection = "cli:main"
